--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,21 @@
 
 	
 	</build>
+	<build>
+    	<plugins>
+        	<plugin>
+            		<groupId>org.apache.maven.plugins</groupId>
+            		<artifactId>maven-surefire-plugin</artifactId>
+            		<version>3.2.5</version>
+            			<configuration>
+               		 		<!-- Example configurations (optional) -->
+                			<skipTests>false</skipTests> <!-- To ensure tests run -->
+                			<testFailureIgnore>false</testFailureIgnore> <!-- Fail the build on test failure -->
+            			</configuration>
+        	</plugin>
+    	</plugins>
+	</build>
+
 
 		<distributionManagement>
         <repository>
